--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 * {
   font-family: "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial,
     sans-serif;
-  margin: 0;
 }
 body {
   margin: 0;
@@ -16,9 +15,12 @@ header {
   background-color: #293f50;
   height: 30vh;
   max-width: 100vw;
-
+}
+.header-flex {
   justify-content: space-evenly;
+  align-items: center;
   display: flex;
+  height: 25vh;
 }
 header .home a {
   display: block;
@@ -54,6 +56,115 @@ header h4 {
 nav {
   margin-top: 10px;
 }
+/* welcome section -homepage */
+
+.welcome {
+  background-color: #293f50;
+  height: 45vh;
+  max-width: 100vw;
+  border: 2px solid #293f50; /* this fixes the issue of the margin between this section and the header */
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "lato";
+  text-align: center;
+}
+@media screen and (max-width: 600px) {
+  .welcome {
+    height: 70vh;
+  }
+  .welcome .btn {
+    width: 10%;
+  }
+}
+.welcome h2 {
+  color: #648880;
+  font-size: 36px;
+  font-weight: 300;
+}
+.welcome p {
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 34px;
+}
+.welcome .btn {
+  background-color: #293f50;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  padding: 13px;
+  width: 20%;
+}
+.welcome a {
+  display: block;
+  z-index: 2;
+  font-size: 16px;
+  font-weight: 400;
+  color: #fff;
+  padding: 8px;
+}
+.welcome .btn:hover {
+  background-color: #fff;
+  color: #293f50;
+  z-index: 1;
+}
+.welcome a:hover {
+  color: #293f50;
+  padding: 5px;
+  font-size: 18px;
+}
+/* card section homepage */
+.content {
+  display: flex;
+  flex-direction: row;
+
+  align-items: center;
+  height: 70vh;
+  max-width: 70%;
+  padding: 5px;
+  margin: auto;
+}
+@media screen and (max-width: 600px) {
+  .content {
+    flex-direction: column;
+    height: auto;
+  }
+}
+.content .card {
+  flex: 1;
+
+  margin: 20px;
+  padding: 5px;
+}
+.content .card h4 {
+  font-size: 14px;
+  color: #a9b2b9;
+  font-weight: 400;
+}
+.content .img {
+  border-radius: 8px;
+}
+.content img {
+  background-color: #293f50;
+  width: 100%;
+  height: auto;
+  position: relative;
+  object-fit: contain;
+  border-radius: 8px;
+}
+.content .card-desc a {
+  font-size: 21px;
+  font-weight: 300;
+  color: #888888;
+}
+.content .card-desc a:hover {
+  color: #a9b2b9;
+}
+.content .card-desc p {
+  font-size: 16px;
+  font-weight: 300;
+  color: #888888;
+}
 
 /* footer */
 footer {
@@ -61,7 +172,7 @@ footer {
   justify-content: space-evenly;
   background-color: #293f50;
   padding-top: 10px;
-  min-height: 20vh;
+  min-height: 15vh;
   max-width: 100vw;
 }
 footer p {
@@ -77,5 +188,3 @@ footer a {
 footer a:hover {
   color: #648880;
 }
-
-/* home page styling */
