--- a/styles.css
+++ b/styles.css
@@ -348,6 +348,84 @@ iframe {
   left: 0;
   right: 0;
 }
+/* register page*/
+.reg-content {
+  width: 70%;
+  height: 70vh;
+  margin: auto;
+  display: flex;
+}
+.text {
+  flex: 2;
+  margin-right: 20px;
+}
+.text ul {
+  list-style-type: square;
+}
+.text h4 {
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 22px;
+  color: #648880;
+}
+.text h2 {
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 44px;
+  color: #648880;
+}
+.text p,
+ul {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 22px;
+  color: #888888;
+}
+.form {
+  flex: 1;
+}
+.form label {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #648880;
+}
+.form input,
+textarea,
+select {
+  display: block;
+  width: 100%;
+  border-radius: 5px;
+  border: 1px solid #c6c9cc;
+  font-size: 16px;
+  font-weight: 300;
+  padding: 5px;
+  margin-top: 10px;
+  margin-bottom: 8px;
+}
+.form div select {
+  width: 20%;
+}
+.form div {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.form a {
+  display: block;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #fff;
+  background-color: #648880;
+  text-align: center;
+  border-radius: 6px;
+  margin: 10px 10px 10px 0;
+  width: 50%;
+  padding: 10px;
+}
+.form a:hover {
+  background-color: #77a198;
+}
 /* footer */
 footer {
   display: flex;
@@ -368,5 +446,4 @@ footer a {
   font-size: 14px;
 }
 footer a:hover {
-  color: #648880;
 }
